# blink_sdcc

./: CMakeLists.txt  readme.md
FW_lib/: CMakeLists.txt
FW_lib/inc/: RD8T36x_C.h  compiler.h  rd8.h  rd8_gpio.h  rd8_uart0.h
FW_lib/src/: rd_gpio.c  rd_uart0.c
app/: CMakeLists.txt  blink.c
cmake/: sdcc-toolchain.cmake  utilities.cmake
